--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.work.YoutubeRelatedVideo</groupId>
 	<artifactId>YoutubeRelatedVideo</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>Util</module>
 		<module>YoutubeConnector</module>
 		<module>App</module>
-    <module>FakeYoutubeConnector</module>
-  </modules>
+		<module>FakeYoutubeConnector</module>
+	</modules>
 
 	<name>YouTubeRelatedVideo</name>
 	<inceptionYear>2013</inceptionYear>
@@ -122,7 +122,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
